--- a/components/xadsxjaqp-python/overlays/development/deployment-patch.yaml
+++ b/components/xadsxjaqp-python/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: xadsxjaqp-python
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: rhtap-quay-quay-rhtap-quay.apps.rosa.kx-feadf363cc.a3a4.p3.openshiftapps.com/rhtap/rhtap-qe:43040428dd23250e6970bc4ebb51ad0a2f690f20@sha256:0f1202e22d31a8556a0188c2ea31891328a2f444882ec987521eda4e431b24b0
+          name: container-image
